<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_background"
    tools:context=".ui.subjects.SubjectsFragment">


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/home"
        android:textColor="@color/blue"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/btnChallengeScreen"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_button_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_button_home_true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/btnChallengeScreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/btnChallengeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_challenge_false"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/btnExam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/icon_card_exam"
        app:layout_constraintBottom_toTopOf="@+id/btnChallenge"
        app:layout_constraintEnd_toStartOf="@+id/btnMath"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/btnMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:src="@drawable/icon_card_math"
        app:layout_constraintEnd_toStartOf="@+id/btnArabic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnExam"
        app:layout_constraintTop_toTopOf="@+id/btnExam" />

    <ImageView
        android:id="@+id/btnArabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:src="@drawable/icon_card_arabic"
        app:layout_constraintEnd_toStartOf="@+id/btnScince"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMath"
        app:layout_constraintTop_toTopOf="@+id/btnMath" />

    <ImageView
        android:id="@+id/btnScince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_card_science"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnArabic"
        app:layout_constraintTop_toTopOf="@+id/btnArabic" />

    <ImageView
        android:id="@+id/btnChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_card_challenge"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/btnArts"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExam" />

    <ImageView
        android:id="@+id/btnArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:src="@drawable/icon_card_arts"
        app:layout_constraintBottom_toBottomOf="@+id/btnChallenge"
        app:layout_constraintEnd_toStartOf="@+id/btnIslamicStudy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnChallenge" />

    <ImageView
        android:id="@+id/btnIslamicStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:src="@drawable/icon_card_islamic_study"
        app:layout_constraintBottom_toBottomOf="@+id/btnArts"
        app:layout_constraintEnd_toStartOf="@+id/btnSocialScince"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnArts" />

    <ImageView
        android:id="@+id/btnSocialScince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_card_social_science"
        app:layout_constraintBottom_toBottomOf="@+id/btnIslamicStudy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnIslamicStudy" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/all_subjects"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/exam"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnExam"
        app:layout_constraintEnd_toEndOf="@+id/btnExam"
        app:layout_constraintStart_toStartOf="@+id/btnExam" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/challenge"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnChallenge"
        app:layout_constraintEnd_toEndOf="@+id/btnChallenge"
        app:layout_constraintStart_toStartOf="@+id/btnChallenge" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/arts"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnChallenge"
        app:layout_constraintEnd_toEndOf="@+id/btnArts"
        app:layout_constraintStart_toStartOf="@+id/btnArts" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:gravity="center"
        android:text="@string/islamic_study"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnChallenge"
        app:layout_constraintEnd_toEndOf="@+id/btnIslamicStudy"
        app:layout_constraintStart_toStartOf="@+id/btnIslamicStudy" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:gravity="center"
        android:text="@string/social_science"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnChallenge"
        app:layout_constraintEnd_toEndOf="@+id/btnSocialScince"
        app:layout_constraintStart_toStartOf="@+id/btnSocialScince" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/math"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnExam"
        app:layout_constraintEnd_toEndOf="@+id/btnMath"
        app:layout_constraintStart_toStartOf="@+id/btnMath" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/arabic"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnExam"
        app:layout_constraintEnd_toEndOf="@+id/btnArabic"
        app:layout_constraintStart_toStartOf="@+id/btnArabic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/candy_beans"
        android:text="@string/science"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnExam"
        app:layout_constraintEnd_toEndOf="@+id/btnScince"
        app:layout_constraintStart_toStartOf="@+id/btnScince" />

</androidx.constraintlayout.widget.ConstraintLayout>